Fix up tooltip on mobile

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -189,6 +189,10 @@ a#advanced-options{
     color: $ice-blue
 }
 
+a.custom-tooltip {
+    color: $deep-sea-blue !important
+}
+
 // Advanced Settings modal
 .percentage {
     width: 4rem;
